# graphiti-claude-code-mcp

./: .dockerignore  .env.docker  .env.graphiti.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.mcp  Dockerfile.test  LANGFUSE_ISSUE.md  MIGRATION_SUMMARY.md  Makefile  OLLAMA_SOLUTION_SUMMARY.md  README.md  SECURITY.md  SOLUTION_OLLAMA_1024.md  TEST_RESULTS.md  capture.py  capture_extended.py  claude_config_example.json  cleanup_embeddings.py  cliff.toml  commands.py  debug_ollama.py  docker-compose.test.orbstack.yml  docker-compose.test.yml  docker-compose.yml  github_issue_draft.md  graphiti_memory.py  langfuse_analyzer.py  langfuse_scoring.py  mcp_server.py  mcp_stdio_wrapper.py  memory_models.py  ollama_embedder_wrapper.py  ollama_native_client.py  pyproject.toml  requirements-dev.txt  (+12 more)
config/: secrets_manifest.py
docs/: 1password-security.md  ARCHITECTURE.md  MAKEFILE_DOCKER_COMPOSE_UPDATE.md  ORBSTACK_CONFIG.md  SSL_TROUBLESHOOTING.md  TEST_RESULTS.md  TROUBLESHOOTING.md
instrumentation/: README.md  __init__.py  adaptive_sampler.py  cascade_detector.py  neo4j_correlation.py  trace_bridge.py  traced_wrapper.py
langfuse/: __init__.py  analyze_langfuse_traces.py  langfuse_models.py
langfuse_integration/: __init__.py  analyze_langfuse_traces.py  langfuse_analyzer.py  langfuse_models.py  langfuse_patterns.py
scripts/: build-docker.sh  check-sdk-health.py  claude-mcp-wrapper.sh  create-video-release.sh  docker-compose-with-token.sh  docker-with-direnv.sh  extract-video-assets.sh  fix-orbstack-config.sh  health_check_langfuse.py  health_check_memory.py  patch-graphiti.sh  setup-1password.sh  setup-dev.sh  start-standard.sh  start-with-1password.sh  sync-dependencies.py  test-docker.sh  test-full-1password.sh  test-in-docker.sh  test-langfuse-mcp.sh  test-video-integration.sh  track_video_engagement.py  verify-mcp-ready.sh  verify_integrity.py
tests/: conftest.py  test_batch_processing.py  test_compatibility.py  test_connection.py  test_debug.py  test_docker.py  test_dual_tracing.py  test_falkordb_connection.py  test_final.py  test_fix.py  test_implicit_scoring_integration.py  test_implicit_scoring_unit.py  test_langfuse_e2e.py  test_langfuse_integration.py  test_langfuse_mcp_protocol.py  test_langfuse_sdk.py  test_loop_prevention.py  test_mcp_fix.py  test_mcp_tools.py  test_memory.py  test_neo4j_connection.py  test_neo4j_integration.py  test_ollama_native.py  test_ollama_simple.py  test_sdk_integration.py  test_simple.py  test_simple_batch.py  (+1 more)
(+48 files in other folders)
