[project]
name = "graphiti-claude-code-mcp"
version = "0.1.0"
description = "Graphiti memory layer for Claude Code with GTD Coach integration"
authors = [{name = "Adeel", email = "adeelahmad@live.co.uk"}]
requires-python = ">=3.9"
dependencies = [
    "graphiti-core[falkordb]>=0.17.7,<0.17.10",
    "python-dotenv>=1.0.0",
    "mcp>=0.1.0",
    "pydantic>=2.0.0",
    "asyncio>=3.4.3",
    "tiktoken>=0.5.0",
    "langfuse>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.setuptools]
py-modules = ["graphiti_memory", "capture", "commands", "mcp_server", "langfuse_analyzer", "langfuse_patterns", "langfuse_models"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
