[project]
name = "graphiti-claude-code-mcp"
version = "3.3.1"
description = "Graphiti memory layer for Claude Code with GTD Coach integration"
authors = [{name = "Adeel", email = "adeelahmad@live.co.uk"}]
requires-python = ">=3.9"
dependencies = [
    "graphiti-core>=0.18.9,<0.19.0",
    "neo4j>=5.28.0",
    "python-dotenv>=1.0.0",
    "mcp>=0.1.0",
    "pydantic>=2.0.0",
    "asyncio>=3.4.3",
    "tiktoken>=0.5.0",
    "langfuse>=3.3.0",
    "onepassword-sdk==0.1.3",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation>=0.41b0",
    "opentelemetry-semantic-conventions>=0.41b0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pip-audit>=2.9.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.setuptools]
py-modules = ["graphiti_memory", "capture", "commands", "mcp_server", "mcp_stdio_wrapper", "secrets_manager", "ssl_config"]
packages = ["langfuse_integration", "instrumentation"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
